--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@primevue/themes": "^4.3.7",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.7"
+    "primevue": "^4.3.7",
+    "vue-router": "^4.5.1"
   }
 }
