--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -13,7 +13,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0",
     "vue": "^3.5.18"
   },
   "devDependencies": {
