--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@primevue/themes": "^4.3.7",
+    "axios": "^1.12.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
     "vue-router": "^4.5.1"
