--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
